--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@ title: "Home"
 <section id="featured-bands" class="content-section">
     <div class="container">
         <h2>Featured Bands</h2>
-        <div class="band-grid">
-            <!-- We'll make this link work later -->
-            <a href="/bands/headxtrauma/" class="band-card">
+        <a href="{{ metadata.pathPrefix }}bands/headxtrauma/" class="band-card">
                 <img src="https://via.placeholder.com/400x300.png/1a1a1a/e50914?text=HeadxTrauma" alt="HeadxTrauma">
                 <h3>HeadxTrauma</h3>
             </a>
